
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ USER_UPPER_MAGIC ;
 scalar_t__ get_esp () ;
 int memcmp (unsigned char*,char const*,int) ;

int getEnvAddr(const char* envPtr)
{
    int envAddr = ((void*)0);
    int retCode = 0;

    char* charPtr = (char *) get_esp();



    while((unsigned int) charPtr < (unsigned int) USER_UPPER_MAGIC)
    {
        retCode = memcmp((unsigned char *) charPtr++, envPtr, 4);

        if(retCode == 0)
        {
            envAddr = (int) (charPtr - 1);
            break;
        }
    }

    return envAddr;
}
