; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_21150.c_getEnvAddr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_21150.c_getEnvAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USER_UPPER_MAGIC = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @getEnvAddr(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  %6 = call i64 (...) @get_esp()
  %7 = inttoptr i64 %6 to i8*
  store i8* %7, i8** %5, align 8
  br label %8

8:                                                ; preds = %25, %1
  %9 = load i8*, i8** %5, align 8
  %10 = ptrtoint i8* %9 to i32
  %11 = load i64, i64* @USER_UPPER_MAGIC, align 8
  %12 = trunc i64 %11 to i32
  %13 = icmp ult i32 %10, %12
  br i1 %13, label %14, label %26

14:                                               ; preds = %8
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %5, align 8
  %17 = load i8*, i8** %2, align 8
  %18 = call i32 @memcmp(i8* %15, i8* %17, i32 4)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp eq i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %14
  %22 = load i8*, i8** %5, align 8
  %23 = getelementptr inbounds i8, i8* %22, i64 -1
  %24 = ptrtoint i8* %23 to i32
  store i32 %24, i32* %3, align 4
  br label %26

25:                                               ; preds = %14
  br label %8

26:                                               ; preds = %21, %8
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @get_esp(...) #1

declare dso_local i32 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
